Update Docker image tags in workflow
- Changed Docker image tags to use 'cursor-chat' instead of 'chat'.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,5 +29,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/chat:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/chat:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/cursor-chat:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/cursor-chat:${{ github.sha }}
