Update backend image and add Traefik labels
- Change backend image tag to v1.0.0
- Add Traefik labels for routing configuration

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   backend:
-    image: marlburrow/cursor-chat:latest
+    image: marlburrow/cursor-chat:v1.0.0
     deploy:
       replicas: 1
       update_config:
@@ -10,6 +10,11 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.chat.rule=Host(`chat.marlburrow.io`)"
+        - "traefik.http.routers.chat.entrypoints=websecure"
+        - "traefik.http.routers.chat.tls.certresolver=le"
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/chat
       - PORT=3000
